test/fail/api/list/list_fill_by_negative.lly
#[
ValueError: Repeat count must be >= 0 (-1 given).
Traceback:
    from [C]: in list::fill
    from list_fill_by_negative.lly:8: in __main__
]#

list::fill(-1, 100)
